@@ -1,3 +1,10 @@
+2006-02-10 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/TreeView_Detail.cc: finally fixed #169683!! ( party, party! :p )
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc,
+	  src/main.cc: cleanups
+	
 2006-02-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Progress.cc: set a min. width for detailstree instead of
